bug: projects (fix overlapping cards);

--- a/resources/sass/includes/containers/_cards.scss
+++ b/resources/sass/includes/containers/_cards.scss
@@ -709,71 +709,71 @@
     .card {
 
         &__content {
-            // @include transition(transform $transition);
-            // @include transform(translateY(3rem));
-            // will-change: transform;
+            @include transition(transform $transition);
+            @include transform(translateY(3rem));
+            will-change: transform;
 
-            // @include responsive-mobile-devices() {
-            //     @include transform(translateY(0) !important);
-            // } 
+            @include responsive-mobile-devices() {
+                @include transform(translateY(0) !important);
+            } 
         }
 
         &__image {
-            // @include transform-origin(bottom, left);
-            // @include transform(scale(1));
-            // @include transition(transform $transition);
-            // will-change: transform;
-            height: auto;
-            width: 12rem;
+            @include transform-origin(bottom, left);
+            @include transform(scale(1));
+            @include transition(transform $transition);
+            will-change: transform;
+            height: 5rem;
+            width: auto;
             // max-height: 4rem;
             // max-width: 25%;
             margin-bottom: $integer-xl;
 
-            // @include responsive-mobile-devices() {
-            //     @include transform(scale(0.8));
-            // }
+            @include responsive-mobile-devices() {
+                @include transform(scale(0.8));
+            }
         }
 
         &__body {
-            // overflow: hidden;
+            overflow: hidden;
 
-            // span {
+            span {
 
-            //     @include transition(transform $transition);
-            //     @include transform(translateY(-100%) scaleY(0.3));
-            //     will-change: transform;
-            //     display: block;
+                @include transition(transform $transition);
+                @include transform(translateY(-100%) scaleY(0.3));
+                will-change: transform;
+                display: block;
 
-            //     @include responsive-mobile-devices() {
-            //         @include transform(translateY(0) scaleY(1) !important);
-            //     }
-            // }
+                @include responsive-mobile-devices() {
+                    @include transform(translateY(0) scaleY(1) !important);
+                }
+            }
         }
 
-        // &__actions {
-        //     @include align-items(flex-start);
-        // }
+        &__actions {
+            @include align-items(flex-start);
+        }
 
-        // &:hover {
+        &:hover {
             
-        //     &:before {
-        //         background-color: $white;
-        //     }
+            &:before {
+                background-color: $white;
+            }
     
-        //     .card {
+            .card {
                 
-        //         &__content {
-        //             @include transform(translateY(0));
-        //         }
+                &__content {
+                    @include transform(translateY(0));
+                }
 
-        //         &__image {
-        //             @include transform(scale(0.8));
-        //         }
+                &__image {
+                    @include transform(scale(0.8));
+                }
                 
-        //         &__body span {
-        //             @include transform(translateY(0) scaleY(1));
-        //         }
-        //     }
-        // }
+                &__body span {
+                    @include transform(translateY(0) scaleY(1));
+                }
+            }
+        }
     }
 }
